--- a/web/themes/starter/js/oxbow_paragraphs.config.json
+++ b/web/themes/starter/js/oxbow_paragraphs.config.json
@@ -50,7 +50,7 @@
           },
           "color_10": {
             "label": "Green 2",
-            "value": "#227F22"
+            "value": "#6EBE6E"
           },
           "color_11": {
             "label": "Green 3",
