--- a/composer.json
+++ b/composer.json
@@ -56,17 +56,17 @@
         "composer/installers": "^1.0.20",
         "drupal-composer/drupal-scaffold": "^2.0.1",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "~8.2",
+        "drupal/core": "8.2.7",
         "drush/drush": "~8.0",
         "drupal/console": "~1.0",
         "drupal/admin_toolbar": "^1.17",
         "drupal/paragraphs": "~1.0",
         "drupal/field_collection": "~1.0",
-        "drupal/twig_tweak": "~1.3",
+        "drupal/twig_tweak": "^1.6",
         "drupal/editor_advanced_link": "~1.3",
         "drupal/profile": "1.x-dev",
         "drupal/image_effects": "1.x-dev",
-        "drupal/features": "^3.0",
+        "drupal/features": "^3.5",
         "drupal/ckeditor_entity_link": "^1.0-alpha1",
         "drupal/rules": "^3.0",
         "drupal/linkit": "^5.0",
@@ -80,7 +80,7 @@
         "drupal/stage_file_proxy": "^1.0",
         "drupal/coffee": "^1.0",
         "drupal/recaptcha": "^2.2",
-        "drupal/webform": "^5.0",
+        "drupal/webform": "^5.0-beta9",
         "drupal/dropzonejs": "^1.0",
         "drupal/embed": "^1.0",
         "drupal/entity_embed": "^1.0",
