update oxbow paragraphs. fix package names

--- a/web/modules/custom/oxbow_paragraphs/features/oxbow_paragraphs_defaults/oxbow_paragraphs_defaults.info.yml
+++ b/web/modules/custom/oxbow_paragraphs/features/oxbow_paragraphs_defaults/oxbow_paragraphs_defaults.info.yml
@@ -1,4 +1,4 @@
-name: Defaults
+name: 'Oxbow Paragraphs -- Defaults'
 description: 'Basic paragraph types with content and setting fields.'
 type: module
 core: 8.x
