--- a/web/modules/custom/oxbow_paragraphs/features/oxbow_paragraphs_staff_board/oxbow_paragraphs_staff_board.info.yml
+++ b/web/modules/custom/oxbow_paragraphs/features/oxbow_paragraphs_staff_board/oxbow_paragraphs_staff_board.info.yml
@@ -1,4 +1,4 @@
-name: 'Staff & Board'
+name: 'Oxbow Paragraphs -- Staff & Board'
 description: 'Board and Staff paragraph bundles and their respective profile configurations.'
 type: module
 core: 8.x
