center titles by default

--- a/web/themes/starter/js/oxbow_paragraphs.config.json
+++ b/web/themes/starter/js/oxbow_paragraphs.config.json
@@ -60,6 +60,14 @@
         "default": "auto"
       }
     }
+  },
+
+  "text_for_title": {
+    "fields": {
+      "title_align": {
+        "default": "center"
+      }
+    }
   }
   
 }]
