adjust font sizes.  default titles to center.

--- a/web/themes/starter/js/oxbow_paragraphs.config.json
+++ b/web/themes/starter/js/oxbow_paragraphs.config.json
@@ -68,6 +68,14 @@
         "default": "center"
       }
     }
+  },
+
+  "text_with_title": {
+    "fields": {
+      "title_align": {
+        "default": "center"
+      }
+    }
   }
   
 }]
