update oxbow paragraphs -- add fill to column layouts

--- a/web/modules/custom/oxbow_paragraphs/js/config/oxbow_paragraphs.config.layout.json
+++ b/web/modules/custom/oxbow_paragraphs/js/config/oxbow_paragraphs.config.layout.json
@@ -228,6 +228,10 @@
               "bottom": {
                 "label": "Bottom",
                 "value": "bottom"
+              },
+              "fill": {
+                "label": "Fill",
+                "value": "fill"
               }
             },
             "default": "top"
@@ -505,6 +509,10 @@
           "bottom": {
             "label": "Bottom",
             "value": "bottom"
+          },
+          "fill": {
+            "label": "Fill",
+            "value": "fill"
           }
         },
         "default": "top"
