change purple 1 hex code. add breakpoints for views and 2/3 1/3 layouts.

--- a/web/themes/starter/js/oxbow_paragraphs.config.json
+++ b/web/themes/starter/js/oxbow_paragraphs.config.json
@@ -34,7 +34,7 @@
           },
           "color_6": {
             "label": "Purple 1",
-            "value": "#8B3A7E"
+            "value": "#72516c"
           },
           "color_7": {
             "label": "Purple 2",
