--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ web/sites/*/files
 
 # Ignore configuration files that may contain sensitive information.
 web/sites/*/settings.local.php
+
+# Ignore database dumps
+*--dump.sql
+
